# transcribe-everything

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  check_linux.py  docker-compose.yml  entrypoint.sh  install_droplet.sh  pre_requirements.txt  pyproject.toml  refresh  run_docker.py  setup.py
.github/workflows/: build_docker_image.yml
src/transcribe_everything/: __init__.py  args.py  batch.py  cli.py  cli_docker.py  cli_init.py  constants.py  lang.py  run.py  tmpdir.py  transcribe.py  transcription_pipeline.py  util.py
tests/: test_batches.py  test_cli.py  test_run.py
