[build-system]
requires = ["setuptools>=65.5.1", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe_everything"
readme = "README.md"
description = "transcribe transcriptions ai whisper"
requires-python = ">=3.10"
keywords = ["ai", "transcribe", "anything", "everything", "s3", "remote", "big", "data"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

dependencies = [
    "transcribe-anything>=3.0.4",
    "virtual-fs>=1.0.19",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "transcribe_everything.__version__" }

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]
disable = [
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"


[project.scripts]
transcribe_everything = "transcribe_everything.cli:main"
